# spell-sat

./: ContactUs.md  Licensing.md  Overview.md  Patch_208.md  ProjectHome.md  Release_2312.md  SPELL2_Install.md  SPELL2_Release.md  SourceCode2.md  TableOfContents.md
spell-dev/trunk/: Makefile.am  configure.ac
spell-dev/trunk/config/: Makefile.am
spell-dev/trunk/config/dev/: config.xml
spell-dev/trunk/config/dev/semantics/: buildtc.xml  dismissuseraction.xml  display.xml  event.xml  finish.xml  getresource.xml  gettm.xml  loaddictionary.xml  pause.xml  prompt.xml  savedictionary.xml  send.xml  setgroundparameter.xml  setresource.xml  setuseraction.xml  startproc.xml  verify.xml  waitfor.xml
spell-dev/trunk/data/: Makefile.am
spell-dev/trunk/doc/: Makefile.am
spell-dev/trunk/rcp/: Makefile.am
spell-dev/trunk/rcp/plugins/org.eclipse.ui.intro.universal_3.2.300.v20090429_1800/: plugin.properties
spell-dev/trunk/scripts/: Makefile.am
spell-dev/trunk/scripts/linux/: Makefile.am  SPELL-DEV  setup-environment.sh
spell-dev/trunk/scripts/win32/: SPELL-DEV.bat
spell-dev/trunk/src/: Makefile.am
spell-dev/trunk/src/com.astra.ses.spell.dev/: .project  SPELLDev.product.linux.product  SPELLDev.product.win32.product  build.properties  plugin.xml
spell-dev/trunk/src/com.astra.ses.spell.dev.activity.generic/: .project  fragment.xml
spell-dev/trunk/src/com.astra.ses.spell.dev.activity.pydev/: .project  fragment.xml
spell-dev/trunk/src/com.astra.ses.spell.dev.activity.subclipse/: .project  fragment.xml
spell-dev/trunk/src/com.astra.ses.spell.dev.config/: .project  plugin.xml
spell-dev/trunk/src/com.astra.ses.spell.dev.control.version/: .project  build.properties  fragment.xml
spell-dev/trunk/src/com.astra.ses.spell.dev.database/: .project  plugin.xml
spell-dev/trunk/src/com.astra.ses.spell.dev.database.test/: .project  plugin.xml
spell-dev/trunk/src/com.astra.ses.spell.dev.database.ui/: .project  plugin.xml
spell-dev/trunk/src/com.astra.ses.spell.dev.database/schema/: com.astra.ses.spell.dev.database.DatabaseInterface.exsd
spell-dev/trunk/src/com.astra.ses.spell.dev.dictionaryeditor/: .project  plugin.xml
spell-dev/trunk/src/com.astra.ses.spell.dev.documentation/: .project  fragment.xml
spell-dev/trunk/src/com.astra.ses.spell.dev.scheck/: .project  plugin.xml
spell-dev/trunk/src/com.astra.ses.spell.dev.scheck.functions/: .project  fragment.xml
spell-dev/trunk/src/com.astra.ses.spell.dev.scheck.gotoc/: .project  fragment.xml
spell-dev/trunk/src/com.astra.ses.spell.dev.scheck.header/: .project  fragment.xml
spell-dev/trunk/src/com.astra.ses.spell.dev.scheck.sfpack1/: .project  fragment.xml
spell-dev/trunk/src/com.astra.ses.spell.dev.scheck.sfunctions/: .project  fragment.xml
spell-dev/trunk/src/com.astra.ses.spell.dev.scheck.ui/: .project  plugin.xml
spell-dev/trunk/src/com.astra.ses.spell.dev.scheck/schema/: com.astra.ses.spell.dev.scheck.EventRuleChecker.exsd  com.astra.ses.spell.dev.scheck.StatickRuleChecker.exsd  com.astra.ses.spell.dev.scheck.sfunctions.SpellCall.exsd
spell-dev/trunk/src/com.astra.ses.spell.dev.spelleditor/: plugin.xml
spell-dev/trunk/src/com.astra.ses.spell.dev/schema/: com.astra.ses.spell.dev.context.SpellContextListener.exsd  com.astra.ses.spell.dev.workspace.ProcedureCreationExtension.exsd
spell-dev/trunk/src/com.astra.ses.spell.language/: .project  build.properties  default_constants  default_functions  default_modifiers
spell/tags/2.0.9/lib/: Makefile.am
spell/tags/2.0.9/lib/SPELL_CFG/: .project  Makefile.am
spell/tags/2.0.9/lib/SPELL_CFG/src/: SPELLcontextConfig.C
spell/tags/2.0.9/lib/SPELL_CIF/: Makefile.am
spell/tags/2.0.9/lib/SPELL_CIFC/: .cproject
spell/tags/2.0.9/lib/SPELL_CIFC/src/: SPELLstandaloneCif.C
spell/tags/2.0.9/lib/SPELL_CIFS/src/: SPELLrequestProcessor.C
spell/tags/2.0.9/lib/SPELL_CTX/: .project  Makefile.am
spell/tags/2.0.9/lib/SPELL_CTX/src/: SPELLclientOperations.C  SPELLclientRegistry.C  (+3 more)
spell/tags/2.0.9/lib/SPELL_IPC/: .cproject  .project
spell/tags/2.0.9/lib/SPELL_LST/: Makefile.am
spell/tags/2.0.9/lib/SPELL_PRC/: .cproject  .project
spell/tags/2.0.9/lib/SPELL_PRD/: .project  Makefile.am
spell/tags/2.0.9/lib/SPELL_SDB/: Makefile.am
spell/tags/2.0.9/lib/SPELL_SYN/: .cproject  Makefile.am
spell/tags/2.0.9/lib/SPELL_UTIL/: .cproject
spell/tags/2.0.9/lib/SPELL_WRP/: .cproject  Makefile.am
spell/trunk/src/: Makefile.am
spell/trunk/src/context/: .cproject  Makefile.am
spell/trunk/src/context/src/: SPELLcontextMain.C
spell/trunk/src/executor/: .cproject  .project  Makefile.am
spell/trunk/src/executor/arena/: compile_proc  deassemble.py  pmod
spell/trunk/src/executor/src/: SPELLexecutorMain.C
spell/trunk/src/executorcmd/: Makefile.am
spell/trunk/src/executorcmd/src/: SPELLexecutorMain.C
spell/trunk/src/listener/: .cproject  Makefile.am
spell/trunk/src/listener/src/: SPELLlistenerMain.C
spell/trunk/src/server/: Makefile.am
spell/trunk/src/server/context/: execoperations.py  exmanager.py  guioperations.py
spell/trunk/src/server/listener/: __init__.py
spell/trunk/src/shell/: .project  Makefile.am
spell/trunk/src/shell/src/: SPELLshellCallstack.H  SPELLshellCif.C  SPELLshellCif.H  SPELLshellCifPython.C  SPELLshellController.H  SPELLshellExecutor.C  SPELLshellExecutor.H  SPELLshellExecutorPython.C  SPELLshellMain.C
spell/trunk/src/spel-gui/: Makefile.am
spell/trunk/src/spel-gui/com.astra.ses.spell.gui/: SPELL-GUI.product  plugin.xml
spell/trunk/src/spel-gui/com.astra.ses.spell.gui.callstack/: .project  fragment.xml
spell/trunk/src/spel-gui/com.astra.ses.spell.gui.core/: build.properties  plugin.xml
spell/trunk/src/spel-gui/com.astra.ses.spell.gui.preferences.ui/: fragment.xml
spell/trunk/src/spel-gui/com.astra.ses.spell.gui.procs/: plugin.xml
spell/trunk/src/spel-gui/com.astra.ses.spell.gui.watchvariables/: fragment.xml  plugin.xml
spell/trunk/src/spel-gui/com.astra.ses.spell.language/: default_constants  default_functions  default_modifiers
spell/trunk/src/spell/: Makefile.am
spell/trunk/src/spell/spell/: __init__.py
(+4299 files in other folders)
