AUTOMAKE_OPTIONS = foreign

if WITH_LIBS
SUBDIRS = SPELL_UTIL \
          SPELL_SYN  \
          SPELL_CFG  \
          SPELL_IPC  \
          SPELL_WRP  \
          SPELL_WS   \
          SPELL_CIF  \
          SPELL_CIFC \
          SPELL_CIFS \
          SPELL_PRC  \
          SPELL_PRD  \
          SPELL_SDB  \
          SPELL_EXC  

if WITH_CONTEXT
SUBDIRS += SPELL_CTX
endif

if WITH_LISTENER
SUBDIRS += SPELL_LST
endif

endif
